# sql-datalineage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
datalineage/: __init__.py  cli.py  lineage.py  logger.py  node.py  util.py
datalineage/context/: base_context.py
datalineage/emitter/: emitter.py  file_based_emitter.py
datalineage/node/: __init__.py  column_node.py  cte_node.py  node.py  node_visitor.py  select_node.py  subquery_node.py  table_node.py  union_node.py  unknown_node.py
datalineage/renderer/: __init__.py  json_renderer.py  mermaid_renderer.py  renderer.py
datalineage/schema_retriever/: schema_retriever.py  sqlalchemy_schema_retriever.py  static_schema_retriever.py
datalineage/serializer/: serializer.py
datalineage/visitor/: pretty_name_visitor.py
docs/example/: output.json  output.mermaid
example/: EXAMPLE.md  test-query.sql
tests/: test_cli.py  test_node.py
tests/lineage/: lineage_conf.yaml  test_lineage.py
tests/lineage/test_cases/test_basic/: json_output.json
tests/lineage/test_cases/test_create/: 00_input.sql  00_json_output.json  01_input.sql  01_json_output.json  02_input.sql  02_json_output.json  schema.json
tests/lineage/test_cases/test_insert/: 00_input.sql  00_json_output.json  01_input.sql  01_json_output.json
tests/lineage/test_cases/test_merge/: 00_input.sql  00_json_output.json  01_input.sql  01_json_output.json  02_input.sql  02_json_output.json  schema.json
tests/lineage/test_cases/test_scalar_subquery/: input.sql  json_output.json  mermaid_output.txt
tests/lineage/test_cases/test_select_not_from_table/: 00_input.sql  00_json_output.json  01_input.sql  01_json_output.json  schema.json
tests/lineage/test_cases/test_union/: 00_input.sql  00_json_output.json  01_input.sql  01_json_output.json  02_input.sql  02_json_output.json  03_json_output.json  04_input.sql  04_mermaid_output.txt  schema.json
tests/renderer/: test_mermaid_renderer.py
tests/schema_retriever/: test_schema_retriever.py  test_sqlalchemy_schema_retriever.py  test_static_schema_retriever.py
tests/serializer/: test_serializer.py
tests/visitor/: test_pretty_name_visitor.py
