[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sql-datalineage"
authors = [
    {name = "Duy Ha", email = "viplazylmt@gmail.com"},
]
description = "A project to build and visualize data lineage from SQL written in python. It supports column level lineage and can combine with metadata retriever for better result."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["data", "lineage", "column-level-lineage"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click",
    "requests",
    "sqlglot[rs]",
    "pydantic==2.*",
    "pyyaml>=6.0.2",
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]
datalineage = "datalineage.cli:main"

[project.urls]
Homepage = "https://github.com/viplazylmht/sql-datalineage"
Source = "https://github.com/viplazylmht/sql-datalineage"
Issues = "https://github.com/viplazylmht/sql-datalineage/issues"

[tool.setuptools]
packages = ["datalineage"]

[tool.setuptools.dynamic]

[tool.setuptools_scm]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["datalineage"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
    "pyyaml>=6.0.2",
    "ruff>=0.4.3",
    "types-pyyaml>=6.0.12.20240917",
]
